--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,7 @@
-@import "tailwindcss";
+@import "./assets/styles/theme.css";
+
+body {
+  font-family: var(--font-inter);
+  background: var(--color-white);
+  color: var(--color-black);
+}
