--- a/src/assets/styles/theme.css
+++ b/src/assets/styles/theme.css
@@ -12,8 +12,8 @@
   --color-white: #fff;
   --color-black: #000;
   --color-beige: #f2f0eb;
-  --color-grey: #e4e4e7;
-  --color-gray: #e4e4e7;
+  --color-grey-500: #e4e4e7;
+  --color-grey-900: #444445;
   --color-orange-500: #ef8a52;
   --color-orange-600: #e56f2d;
   --color-green-500: #85b09a;
