--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,25 @@ body {
   background: var(--color-white);
   color: var(--color-black);
 }
+
+button:disabled {
+  background-color: var(--color-grey-500);
+  color: var(--color-white);
+  cursor: not-allowed;
+}
+
+.form-base {
+  @apply space-y-4;
+}
+
+.form-label {
+  @apply block text-sm font-medium;
+}
+
+.form-label .field-spacing {
+  @apply mt-2;
+}
+
+.input-base {
+  @apply border border-grey-500 font-normal block w-full px-3 py-2.5;
+}
