--- a/src/assets/styles/utility.css
+++ b/src/assets/styles/utility.css
@@ -1,16 +1,12 @@
-@utility form-input-sizing {
-  /* block */
-  display: block;
-  /* w-full */
-  width: 100%;
-  /* px-3 */
-  padding-inline: calc(var(--spacing) * 3) /* 0.75rem = 12px */;
-  /* py-2.5 */
-  padding-block: calc(var(--spacing) * 2.5) /* 0.625rem = 10px */;
-  /* border */
-  border-style: var(--tw-border-style);
+@utility input-size {
+  padding-inline: calc(var(--spacing) * 3);
+  padding-block: calc(var(--spacing) * 2.5);
   border-width: 1px;
-  /* font-normal */
-  --tw-font-weight: var(--font-weight-normal) /* 400 */;
-  font-weight: var(--font-weight-normal) /* 400 */;
+  font-weight: var(--font-weight-normal);
+  font-size: var(--text-base);
+  line-height: var(--text-base--line-height);
+}
+
+@utility input-focus {
+  outline: 2px solid var(--color-lavender-500);
 }
