💫 feat: add progress bar animation for chrome & safari

--- a/src/assets/styles/components.css
+++ b/src/assets/styles/components.css
@@ -23,4 +23,20 @@
   .input-readonly-display {
     @apply input-size border-transparent;
   }
+
+  .milestone-progress {
+    @apply flex-1 h-2 bg-grey-500/60;
+  }
+
+  .milestone-progress::-webkit-progress-bar {
+    @apply bg-grey-500/60;
+  }
+
+  .milestone-progress::-webkit-progress-value {
+    @apply bg-orange-600 transition-[width] duration-600;
+  }
+
+  .milestone-progress::-moz-progress-bar {
+    @apply bg-orange-600;
+  }
 }
